--- a/index.html
+++ b/index.html
@@ -2,29 +2,45 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>My Portfolio</title>
+<title>My Coding Portfolio</title>
 <link rel="stylesheet" href="styles.css">
+<script src="script.js" defer></script>
 </head>
 <body>
+
 <header>
-  <h1>Welcome to My Portfolio</h1>
+  <h1>Welcome to My Coding Portfolio</h1>
 </header>
+
 <main>
-  <section id="about">
-    <h2>About Me</h2>
-    <p>Introduce yourself, your background, skills, and experiences.</p>
+  <section id="html-css-js" class="segment">
+    <h2>HTML/CSS/JS</h2>
+    <button class="btn">Showcase</button>
+    <!-- Add HTML/CSS/JS projects, content, or details here -->
   </section>
-  <section id="projects">
-    <h2>Projects</h2>
-    <!-- Add your projects here -->
+  
+  <section id="java" class="segment">
+    <h2>Java</h2>
+    <button class="btn">Showcase</button>
+    <!-- Add Java projects, content, or details here -->
   </section>
-  <section id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+  
+  <section id="python" class="segment">
+    <h2>Python</h2>
+    <button class="btn">Showcase</button>
+    <!-- Add Python projects, content, or details here -->
+  </section>
+  
+  <section id="ruby" class="segment">
+    <h2>Ruby</h2>
+    <button class="btn">Showcase</button>
+    <!-- Add Ruby projects, content, or details here -->
   </section>
 </main>
+
 <footer>
-  <p>&copy; 2024 My Portfolio. All rights reserved.</p>
+  <p>&copy; 2024 My Coding Portfolio. All rights reserved.</p>
 </footer>
+
 </body>
 </html>
