--- a/index.html
+++ b/index.html
@@ -16,21 +16,33 @@
   <section id="html-css-js" class="segment">
     <h2>HTML/CSS/JS</h2>
     <button class="btn">Showcase</button>
+    <div class="content">
+      <p>Content for HTML/CSS/JS...</p>
+    </div>
   </section>
   
   <section id="java" class="segment">
     <h2>Java</h2>
     <button class="btn">Showcase</button>
+    <div class="content">
+      <p>Content for Java...</p>
+    </div>
   </section>
   
   <section id="python" class="segment">
     <h2>Python</h2>
     <button class="btn">Showcase</button>
+    <div class="content">
+      <p>Content for Python...</p>
+    </div>
   </section>
   
   <section id="ruby" class="segment">
     <h2>Ruby</h2>
     <button class="btn">Showcase</button>
+    <div class="content">
+      <p>Content for Ruby...</p>
+    </div>
   </section>
 </main>
 
