--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>My Coding Portfolio</title>
 <link rel="stylesheet" href="styles.css">
-<script src="script.js" defer></script>
 </head>
 <body>
 
@@ -12,38 +11,24 @@
   <h1>Welcome to My Coding Portfolio</h1>
 </header>
 
+<nav>
+  <ul>
+    <!-- Navigation links to showcase pages -->
+    <li><a href="html-css-js.html">HTML/CSS/JS</a></li>
+    <li><a href="java.html">Java</a></li>
+    <li><a href="python.html">Python</a></li>
+    <li><a href="ruby.html">Ruby</a></li>
+  </ul>
+</nav>
+
 <main>
-  <section id="html-css-js" class="segment">
-    <h2>HTML/CSS/JS</h2>
-    <button class="btn">Showcase</button>
-    <div class="content">
-      <p>Content for HTML/CSS/JS...</p>
-    </div>
+  <section>
+    <h2>About Me</h2>
+    <p>Introduction, skills, experience, and other details about you...</p>
+    <!-- Add additional content, sections, or details about you or your portfolio -->
   </section>
   
-  <section id="java" class="segment">
-    <h2>Java</h2>
-    <button class="btn">Showcase</button>
-    <div class="content">
-      <p>Content for Java...</p>
-    </div>
-  </section>
-  
-  <section id="python" class="segment">
-    <h2>Python</h2>
-    <button class="btn">Showcase</button>
-    <div class="content">
-      <p>Content for Python...</p>
-    </div>
-  </section>
-  
-  <section id="ruby" class="segment">
-    <h2>Ruby</h2>
-    <button class="btn">Showcase</button>
-    <div class="content">
-      <p>Content for Ruby...</p>
-    </div>
-  </section>
+  <!-- Add more sections, content, or details as needed -->
 </main>
 
 <footer>
