--- a/java.html
+++ b/java.html
@@ -11,6 +11,17 @@
   <h1>Java Showcase</h1>
 </header>
 
+<nav>
+  <ul>
+    <!-- Navigation links to showcase pages -->
+    <li><a href="html-css-js.html">HTML/CSS/JS</a></li>
+    <li><a href="java.html">Java</a></li>
+    <li><a href="python.html">Python</a></li>
+    <li><a href="ruby.html">Ruby</a></li>
+  </ul>
+</nav>
+
+  
 <main>
   <section>
     <h2>Projects</h2>
