--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
   <h1>Welcome to My Coding Portfolio</h1>
   <nav>
     <a href="index.html">Home</a>
-    <a href="projects.html">Projects</a>
+    <a href="html-css-js.html">HTML</a>
+    <a href="java.html">Java</a>
+    <a href="python.html">Python</a>
+    <a href="ruby.html">Ruby</a>
+    
+    <!--<a href="projects.html">Projects</a>
     <a href="about.html">About</a>
     <a href="skills.html">Skills</a>
     <a href="contact.html">Contact</a>
+  -->
   </nav>
 </header>
 
