--- a/java.html
+++ b/java.html
@@ -14,10 +14,11 @@
 <nav>
   <ul>
     <!-- Navigation links to showcase pages -->
-    <li><a href="html-css-js.html">HTML/CSS/JS</a></li>
-    <li><a href="java.html">Java</a></li>
-    <li><a href="python.html">Python</a></li>
-    <li><a href="ruby.html">Ruby</a></li>
+    <a href="index.html">Home</a>
+    <a href="html-css-js.html">HTML/CSS/JS</a>
+    <a href="java.html">Java</a>
+    <a href="python.html">Python</a>
+    <a href="ruby.html">Ruby</a>
   </ul>
 </nav>
 
