--- a/index.html
+++ b/index.html
@@ -39,15 +39,24 @@
     <h2>Hidden Section</h2>
     <p>This is a hidden section that can be toggled!</p>
   </div>
-</main>
 
-<!-- Basic Contact Form -->
-<section>
-  <h2>Contact Me</h2>
-  <form>
-    <!-- Form fields (Name, Email, Message) -->
-  </form>
-</section>
+  <!-- Contact Form -->
+  <section>
+    <h2>Contact Me</h2>
+    <form action="#" method="post" id="contactForm">
+      <label for="name">Name:</label>
+      <input type="text" id="name" name="name" required>
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required>
+
+      <label for="message">Message:</label>
+      <textarea id="message" name="message" rows="4" required></textarea>
+
+      <input type="submit" value="Submit">
+    </form>
+  </section>
+</main>
 
 <!-- Footer -->
 <footer>
